ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-stack-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.vdc.id`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-prometheus
      port: 9090
  - match: Host(`grafana.vdc.id`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
  - match: Host(`alertmanager.vdc.id`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
